register user fixed

--- a/src/app/components/employees/employees-list/employees-list.component.html
+++ b/src/app/components/employees/employees-list/employees-list.component.html
@@ -59,13 +59,13 @@
         <div class="row filter-row">
           <div class="col-sm-6 col-md-3">
             <div class="form-group form-focus">
-              <input type="text" class="form-control floating" />
+              <input type="text" class="form-control floating" [(ngModel)]="staffid" (ngModelChange)="SearchId()" />
               <label class="focus-label">Employee ID</label>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="form-group form-focus">
-              <input type="text" class="form-control floating" />
+              <input type="text" class="form-control floating" [(ngModel)]="name" (ngModelChange)="Search()" />
               <label class="focus-label">Employee Name</label>
             </div>
           </div>
