--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
           <ul style="display: none">
             <li><a class="" href="dashboard">Admin Dashboard</a></li>
             <li>
-              <a class="active" href="employee-dashboard">Employee Dashboard</a>
+              <a class="active" href="employee-dashboard" (click)="dashEm()">Employee Dashboard</a>
             </li>
           </ul>
         </li>
